# sqsh

./: .gitignore  Cargo.toml  README.md
benchmarks/: duplicate.toml  overall.toml  plot_whisker.py
sqsh/: Cargo.toml  LICENSE
sqsh-benchmark/: Cargo.toml  README.md
sqsh-benchmark/examples/: base.toml  duplicate.toml  easy.toml
sqsh-benchmark/src/: cli.rs  core.rs  main.rs  util.rs
sqsh-cli/: Cargo.toml
sqsh-cli/src/: cli.rs  main.rs  utils.rs
sqsh-testdata/: Cargo.toml  README.md
sqsh-testdata/src/: cli.rs  main.rs
sqsh/src/: core.rs  lib.rs
sqsh/src/core/: checksum.rs  mod.rs  process.rs  stream.rs
sqsh/src/processors/: adler32.rs  crc32.rs  duplicate.rs  mod.rs
sqsh/src/processors/rle/: classic.rs  lossy.rs  mod.rs  telemetry.rs
sqsh/src/processors/rle/conditional/: mod.rs  rlesortedu8.rs
sqsh/src/stats/: mod.rs  probtable.rs
src/: lib.rs
