[package]
name = "sqsh-benchmark"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.*"
tempfile = "3.*"
serde = { version = "1.*", features = ["derive"] }
clap = { version = "3.*", features = ["derive"] }
