[package]
name = "sqsh-testdata"
version = "0.1.2"
edition = "2021"
description = "Tool to generate testdata for data compression"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sqsh-testdata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
rand_distr = "0.4.*"
rand_chacha = "0.3.*"
clap = { version = "3.*", features = ["derive"] }
byteorder = "1.4.*"
